# MIDIMessageParser

./: .gitignore  LICENSE  README.md
MIDIParser.xcodeproj/: project.pbxproj
MIDIParser.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MIDIParser.xcodeproj/xcuserdata/njazz.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
MIDIParser.xcodeproj/xcuserdata/njazz.xcuserdatad/xcschemes/: MIDIParser-macOS.xcscheme  xcschememanagement.plist
XCTests/: Tests.m
py/: CMakeLists.txt  README.md  py_midiparser.cpp  setup.py
py/py_midiparser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: MIDIParser.c  MIDIParser.h
